syntax = "proto3";

service PeopleSearchGrpc {
    rpc FindPersons (FindRequest) returns (FindResponse);
}

message GrpcPerson {
    int32  personId   = 1;
    string firstName  = 2;
    string lastName   = 3;
    string address    = 4;
    string city       = 5;
    string state      = 6;
    string postalCode = 7;
}

message FindRequest {
    string query = 1;
    int32  skip  = 2;
    int32  take  = 3;
}

message FindResponse {
    repeated GrpcPerson results = 1;
}